removed redundant pin configrmation token
